--- a/src/EasyPlugins/EasyPlugins.csproj
+++ b/src/EasyPlugins/EasyPlugins.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -42,12 +42,13 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyVersionInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildProjectDirectory)\..\.build\MSBuild.Community.Tasks.targets"/>
+  <!-- <Import Project="$(MSBuildProjectDirectory)\..\.build\MSBuild.Community.Tasks.targets"/> -->
   <PropertyGroup>
     <PostBuildEvent>
     </PostBuildEvent>
@@ -57,8 +58,10 @@
   <Target Name="BeforeBuild">
   </Target>
   -->
+  <!-- 
   <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release'">
     <WebDownload Condition="!Exists('$(MSBuildProjectDirectory)\..\.build\nuget.exe')" Filename="$(MSBuildProjectDirectory)\..\.build\nuget.exe" FileUri="https://dist.nuget.org/win-x86-commandline/latest/nuget.exe" />
     <Exec Command="$(MSBuildProjectDirectory)\..\.build\nuget pack EasyPlugins.nuspec -IncludeReferencedProjects -Prop Configuration=Release" WorkingDirectory="$(ProjectDir)" />
   </Target>
+  -->
 </Project>
