--- a/src/EasyPlugins.Tests/EasyPlugins.Tests.csproj
+++ b/src/EasyPlugins.Tests/EasyPlugins.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4A1B7EEE-E103-4B46-8EBB-88D37CDA285F}</ProjectGuid>
+    <ProjectGuid>{CC83EEBE-1456-4572-8EA8-37829B36B869}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EasyPlugins</RootNamespace>
-    <AssemblyName>EasyPlugins</AssemblyName>
+    <RootNamespace>EasyPlugins.Tests</RootNamespace>
+    <AssemblyName>EasyPlugins.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NUnit.ApplicationDomain, Version=7.0.0.0, Culture=neutral, PublicKeyToken=afbd8211e0c40e2c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.ApplicationDomain.7.0.0\lib\net40\NUnit.ApplicationDomain.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="nunit.framework, Version=3.2.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.2.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,46 +48,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EasyPluginException.cs" />
-    <Compile Include="ErrorCode.cs" />
-    <Compile Include="ErrorMessages.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ErrorMessages.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Fsi\FileSystemPluginHostConfig.cs" />
-    <Compile Include="Fsi\FileSystemPluginHost.cs" />
-    <Compile Include="Fsi\FileSystemPluginHostFactory.cs" />
-    <Compile Include="IPluginHost.cs" />
-    <Compile Include="IPluginManager.cs" />
-    <Compile Include="IPluginManifest.cs" />
-    <Compile Include="Mock\MockHost.cs" />
-    <Compile Include="PluginManager.cs" />
+    <Compile Include="PluginManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\AssemblyVersionInfo.cs" />
-    <Compile Include="Utils\PathUtils.cs" />
+    <Compile Include="RunInSeparateAppDomainTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ErrorMessages.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ErrorMessages.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <ProjectReference Include="..\EasyPlugins\EasyPlugins.csproj">
+      <Project>{4a1b7eee-e103-4b46-8ebb-88d37cda285f}</Project>
+      <Name>EasyPlugins</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- <Import Project="$(MSBuildProjectDirectory)\..\.build\MSBuild.Community.Tasks.targets"/> -->
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
-  -->
-  <!-- 
-  <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release'">
-    <WebDownload Condition="!Exists('$(MSBuildProjectDirectory)\..\.build\nuget.exe')" Filename="$(MSBuildProjectDirectory)\..\.build\nuget.exe" FileUri="https://dist.nuget.org/win-x86-commandline/latest/nuget.exe" />
-    <Exec Command="$(MSBuildProjectDirectory)\..\.build\nuget pack EasyPlugins.nuspec -IncludeReferencedProjects -Prop Configuration=Release" WorkingDirectory="$(ProjectDir)" />
+  <Target Name="AfterBuild">
   </Target>
   -->
 </Project>
