--- a/src/EasyPlugins/EasyPlugins.csproj
+++ b/src/EasyPlugins/EasyPlugins.csproj
@@ -32,6 +32,10 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,30 +44,42 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EasyPluginException.cs" />
+    <Compile Include="Fs\FsConstants.cs" />
+    <Compile Include="IEasyPlugin.cs" />
+    <Compile Include="PluginEventArgs.cs" />
+    <Compile Include="PluginsException.cs" />
     <Compile Include="ErrorCode.cs" />
     <Compile Include="ErrorMessages.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ErrorMessages.resx</DependentUpon>
     </Compile>
-    <Compile Include="Fsi\FileSystemPluginHostConfig.cs" />
-    <Compile Include="Fsi\FileSystemPluginHost.cs" />
-    <Compile Include="Fsi\FileSystemPluginHostFactory.cs" />
-    <Compile Include="IPluginHost.cs" />
-    <Compile Include="IPluginManager.cs" />
-    <Compile Include="IPluginManifest.cs" />
-    <Compile Include="Mock\MockHost.cs" />
-    <Compile Include="PluginManager.cs" />
+    <Compile Include="Fs\FsPluginsRegistrar.cs" />
+    <Compile Include="Fs\FsModels.cs" />
+    <Compile Include="PluginDependency.cs" />
+    <Compile Include="PluginManifest.cs" />
+    <Compile Include="PluginRuntime.cs" />
+    <Compile Include="Fs\FsPluginsProvider.cs" />
+    <Compile Include="PluginsManager.cs" />
+    <Compile Include="Utils\FsUtils.cs" />
+    <Compile Include="PluginsProvider.cs" />
+    <Compile Include="PluginsRegistrar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersionInfo.cs" />
-    <Compile Include="Utils\PathUtils.cs" />
+    <Compile Include="PluginRegistration.cs" />
+    <Compile Include="Utils\EnumerableExtensions.cs" />
+    <Compile Include="Utils\StringExtensions.cs" />
+    <Compile Include="Utils\TaskExtensions.cs" />
+    <Compile Include="Utils\TopologicalSort.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ErrorMessages.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ErrorMessages.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="manifest.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- <Import Project="$(MSBuildProjectDirectory)\..\.build\MSBuild.Community.Tasks.targets"/> -->
