re-org and beginnings of some samples

--- a/tests/EasyPlugins.Tests/EasyPlugins.TestPlugins/MyCompany.MyApp.AwesomePlugin2/packages.config
+++ b/tests/EasyPlugins.Tests/EasyPlugins.TestPlugins/MyCompany.MyApp.AwesomePlugin2/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Dapper" version="1.42" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
-  <package id="ServiceStack.Text" version="3.9.71" targetFramework="net461" />
+  <package id="ServiceStack.Text" version="3.9.71" targetFramework="net461" allowedVersions="3.9.71" />
 </packages>
