--- a/tests/EasyPlugins.Tests/EasyPlugins.TestPlugins/MyCompany.MyApp.AwesomePlugin1/MyCompany.MyApp.AwesomePlugin1.csproj
+++ b/tests/EasyPlugins.Tests/EasyPlugins.TestPlugins/MyCompany.MyApp.AwesomePlugin1/MyCompany.MyApp.AwesomePlugin1.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F107951E-7AE3-46AC-A534-ABBCEE05F0CF}</ProjectGuid>
+    <ProjectGuid>{08E450C8-8DFB-4A88-97E6-9027D1367E93}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MyCompany.MyApp.AwesomePlugin2</RootNamespace>
-    <AssemblyName>MyCompany.MyApp.AwesomePlugin2</AssemblyName>
+    <RootNamespace>MyCompany.MyApp.AwesomePlugin1</RootNamespace>
+    <AssemblyName>MyCompany.MyApp.AwesomePlugin1</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\_test_pluginsdir\MyCompany.MyApp.AwesomePlugin2\</OutputPath>
+    <OutputPath>..\..\_test_pluginsdir\MyCompany.MyApp.AwesomePlugin1\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -30,16 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="ServiceStack.Text, Version=3.9.71.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\ServiceStack.Text.3.9.71\lib\net35\ServiceStack.Text.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -57,7 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\EasyPlugins\EasyPlugins.csproj">
+    <ProjectReference Include="..\..\..\..\src\EasyPlugins\EasyPlugins.csproj">
       <Project>{4a1b7eee-e103-4b46-8ebb-88d37cda285f}</Project>
       <Name>EasyPlugins</Name>
     </ProjectReference>
