--- a/tests/EasyPlugins.Tests/EasyPlugins.TestPlugins/MyCompany.MyApp.AwesomePlugin3/MyCompany.MyApp.AwesomePlugin3.csproj
+++ b/tests/EasyPlugins.Tests/EasyPlugins.TestPlugins/MyCompany.MyApp.AwesomePlugin3/MyCompany.MyApp.AwesomePlugin3.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CC83EEBE-1456-4572-8EA8-37829B36B869}</ProjectGuid>
+    <ProjectGuid>{BADA80CE-551B-40F1-BDD7-E8042AEE96FF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EasyPlugins.Tests</RootNamespace>
-    <AssemblyName>EasyPlugins.Tests</AssemblyName>
+    <RootNamespace>MyCompany.MyApp.AwesomePlugin3</RootNamespace>
+    <AssemblyName>MyCompany.MyApp.AwesomePlugin3</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\_test_pluginsdir\MyCompany.MyApp.AwesomePlugin3\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -30,12 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NUnit.ApplicationDomain, Version=7.0.0.0, Culture=neutral, PublicKeyToken=afbd8211e0c40e2c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.ApplicationDomain.7.0.0\lib\net40\NUnit.ApplicationDomain.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="nunit.framework, Version=3.2.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.2.1\lib\net45\nunit.framework.dll</HintPath>
+    <Reference Include="ServiceStack.Text, Version=3.9.71.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\ServiceStack.Text.3.9.71\lib\net35\ServiceStack.Text.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -48,29 +44,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Fs\FsPluginsProviderTests.cs" />
-    <Compile Include="Fs\FsPluginsRegistrarTests.cs" />
-    <Compile Include="PluginsManagerTests.cs" />
+    <Compile Include="EasyPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AppDomainTests.cs" />
-    <Compile Include="Utils\FsUtilsTests.cs" />
-    <Compile Include="Utils\StringExtensionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\EasyPlugins\EasyPlugins.csproj">
+    <ProjectReference Include="..\..\..\..\src\EasyPlugins\EasyPlugins.csproj">
       <Project>{4a1b7eee-e103-4b46-8ebb-88d37cda285f}</Project>
       <Name>EasyPlugins</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
-    <None Include="web.config" />
+    <Content Include="plugin.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+    <Content Include="ReadMe.txt" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
