--- a/tests/EasyPlugins.Tests/EasyPlugins.TestPlugins/MyCompany.MyApp.AwesomePlugin4/MyCompany.MyApp.AwesomePlugin4.csproj
+++ b/tests/EasyPlugins.Tests/EasyPlugins.TestPlugins/MyCompany.MyApp.AwesomePlugin4/MyCompany.MyApp.AwesomePlugin4.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BADA80CE-551B-40F1-BDD7-E8042AEE96FF}</ProjectGuid>
+    <ProjectGuid>{AE9FA06E-648B-4081-97E3-6A9B1F19A4FF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MyCompany.MyApp.AwesomePlugin3</RootNamespace>
-    <AssemblyName>MyCompany.MyApp.AwesomePlugin3</AssemblyName>
+    <RootNamespace>MyCompany.MyApp.AwesomePlugin4</RootNamespace>
+    <AssemblyName>MyCompany.MyApp.AwesomePlugin4</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\_test_pluginsdir\MyCompany.MyApp.AwesomePlugin3\</OutputPath>
+    <OutputPath>..\..\_test_pluginsdir\MyCompany.MyApp.AwesomePlugin4\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -30,8 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ServiceStack.Text, Version=3.9.71.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\ServiceStack.Text.3.9.71\lib\net35\ServiceStack.Text.dll</HintPath>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -48,20 +48,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\EasyPlugins\EasyPlugins.csproj">
-      <Project>{4a1b7eee-e103-4b46-8ebb-88d37cda285f}</Project>
+    <Content Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\src\EasyPlugins\EasyPlugins.csproj">
+      <Project>{4A1B7EEE-E103-4B46-8EBB-88D37CDA285F}</Project>
       <Name>EasyPlugins</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <Content Include="plugin.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="ReadMe.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
